# socdata

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: convert_sas.py
socdata/: __init__.py  __main__.py  cli.py  context.py  conversation.py  display.py  session.py  setup_check.py  tool.py
socdata/datasets/: __init__.py  anes.py  base.py  cache.py  census.py  gss.py  ipums.py  registry.py  wvs.py
socdata/stats/: __init__.py  chisq.py  engine.py  logistic.py  ols.py  ordinal.py  results.py  weights.py
